@@ -159,11 +159,25 @@ class IRBEMTestsWithoutOMNI(unittest.TestCase):
         self.assertEqual(expected, ib.get_dtype(sysaxes))
 
     def test_get_sysaxes(self):
+        """Test that expected value is returned for sysaxes query"""
         dtype = 'GSE'
-        carsph = 'car'
-        expected = 3
-        self.assertEqual(expected, ib.get_sysaxes(dtype, carsph))
-        
+        self.assertEqual(3, ib.get_sysaxes(dtype, 'car'))
+        self.assertEqual(None, ib.get_sysaxes(dtype, 'sph'))
+
+    def test_prep_irbem_sysaxesnone(self):
+        """prep_irbem should handle 'car' and 'sph' version of systems identically"""
+        locc = spacepy.coordinates.Coords([[3,0,0],[2,0,0]], 'GSM', 'car')
+        out1 = ib.prep_irbem(ticks=self.ticks, loci=locc,
+                             extMag='0', options=[1, 0, 0, 0, 1])
+        pos = ib.car2sph(locc.data)
+        locs = spacepy.coordinates.Coords(pos, 'GSM', 'sph')
+        out2 = ib.prep_irbem(ticks=self.ticks, loci=locs,
+                             extMag='0', options=[1, 0, 0, 0, 1])
+        self.assertEqual(out1['sysaxes'], out2['sysaxes'])
+        numpy.testing.assert_almost_equal(out1['xin1'], out2['xin1'])
+        numpy.testing.assert_almost_equal(out1['xin2'], out2['xin2'])
+        numpy.testing.assert_almost_equal(out1['xin3'], out2['xin3'])
+
     def test_sph2car(self):
         loc = [1,45,45]
         expected = array([ 0.5,  0.5,  0.70710678])	
