@@ -6,6 +6,8 @@ coordinates
 irbempy
  - Update IRBEMlib to rev620
  - Rev620 adds IGRF13 coefficients
+ - Add conversion so all systems supported by coordinates can be passed
+   to IRBEMlib routines
 plot
  - utils.EventClicker support for non-line plots (e.g. pcolor)
  - New method for adding arrows to lines in utils
